Fix experience section overlapping on mobile
Job entries used col-xs-2/col-xs-10 which forced a side-by-side
layout at all screen sizes. On phones the left column (company/date)
was only ~62px wide, causing text to overlap the description.
Now stacks vertically below 768px.

via [Happy](https://happy.engineering)

--- a/css/main.css
+++ b/css/main.css
@@ -474,6 +474,26 @@ HOBBIES
 MEDIA
 *******************************************/
 
+@media (max-width: 767px)
+{
+    .job .col-xs-2,
+    .job .col-xs-10
+    {
+        width: 100%;
+        float: none;
+    }
+
+    .job .col-xs-2
+    {
+        margin-bottom: 2px;
+    }
+
+    .job
+    {
+        margin-bottom: 20px;
+    }
+}
+
 @media (min-width: 500px)
 {
     #education .description
